@@ -2,6 +2,7 @@
 	* SQL optimization: Replaced a 'select *' with a 'select count(*)'
 	in Forum.class.  Modified query in project_summary.php to limit columns
 	returned to those used.
+	* Trimmed a large unused function - project_summary() - from project_summary.php.
 
 2004-03-08  Tom Copeland <tom@infoether.com>
 	* SQL optimization: Replaced 'select *' occurrences in User.class
